--- a/front/html/index.html
+++ b/front/html/index.html
@@ -13,6 +13,8 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="../js/services/dataManager.js" defer></script>
+    <script src="../js/pages/index.js" defer></script>
   </head>
 
   <body>
@@ -49,13 +51,7 @@
           <h2>Une gamme d'articles exclusifs</h2>
         </div>
         <section class="items" id="items"> 
-<!--           <a href="./product.html?id=42">
-            <article>
-              <img src=".../product01.jpg" alt="Lorem ipsum dolor sit amet, Kanap name1">
-              <h3 class="productName">Kanap name1</h3>
-              <p class="productDescription">Dis enim malesuada risus sapien gravida nulla nisl arcu. Dis enim malesuada risus sapien gravida nulla nisl arcu.</p>
-            </article>
-          </a> -->
+
         </section>
       </div>
     </main>
@@ -83,6 +79,5 @@
         </div>
       </div>
     </footer>
-  <script src="../js/script.js"></script>
   </body>
 </html>
