--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet" />
     <link href="../css/cart.css" rel="stylesheet" />
+    <script src="../js/services/dataManager.js" defer></script>
+    <script src="../js/pages/cart.js" defer></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -48,29 +50,10 @@
           <h1>Votre panier</h1>
           <section class="cart">
             <section id="cart__items">
-             <!--  <article class="cart__item" data-id="{product-ID}">
-                <div class="cart__item__img">
-                  <img src="../images/product01.jpg" alt="Photographie d'un canapé">
-                </div>
-                <div class="cart__item__content">
-                  <div class="cart__item__content__titlePrice">
-                    <h2>Nom du produit</h2>
-                    <p>42,00 €</p>
-                  </div>
-                  <div class="cart__item__content__settings">
-                    <div class="cart__item__content__settings__quantity">
-                      <p>Qté : </p>
-                      <input type="number" class="itemQuantity" name="itemQuantity" min="1" max="100" value="42">
-                    </div>
-                    <div class="cart__item__content__settings__delete">
-                      <p class="deleteItem">Supprimer</p>
-                    </div>
-                  </div>
-                </div>
-              </article> -->
+             
             </section>
             <div class="cart__price">
-              <p>Total (<span id="totalQuantity"><!-- 2 --></span> articles) : <span id="totalPrice"><!-- 84,00 --></span> €</p>
+              <p>Total (<span id="totalQuantity"></span> articles) : <span id="totalPrice"><!-- 84,00 --></span> €</p>
             </div>
             <div class="cart__order">
               <form method="get" class="cart__order__form">
@@ -132,6 +115,6 @@
         </div>
       </div>
     </footer>
-  <script src="../js/cart.js"></script>
+ 
   </body>
 </html>
